--- a/index.html
+++ b/index.html
@@ -31,12 +31,25 @@
     </header>
     <main>
         <section class="frst-sec">
-            <div class="content">
-                <h2>Válasszon minőségi parfümjeink közül online.</h2>
-                <input type="text" placeholder="Keresés">
-                <button>Vásároljon most</button>
+            <div class="container">
+                <div class="item">
+                  <h2>Válasszon minőségi parfümjeink közül online.</h2>
+                  <input type="text" placeholder="Keresés">
+                  <a href="">Vásároljon most</a>
+                </div>
+                <div class="item">
+                </div>
             </div>
         </section>
+
+        <section class="scnd-sec">
+          <div class="item">
+
+          </div>
+          <div class="item">
+            
+          </div>
+      </section>
     </main>
     <footer>
 
