--- a/index.html
+++ b/index.html
@@ -158,10 +158,12 @@
           <p class="text">Cím: 7030, Paks Dózsa György út 18. </p>
         </div>
         <div class="col">
-           <div class="icon">
-            <img src="pics/lilla.png" alt="lilla" width="200px">
-            <span><ion-icon name="logo-facebook"></ion-icon></span>
-            <span><ion-icon name="logo-instagram"></ion-icon></span>
+          <div class="icon">
+            <img src="pics/lilla.png" alt="lilla">
+            <div class="icons">
+              <span><ion-icon name="logo-facebook"></ion-icon></span>
+              <span><ion-icon name="logo-instagram"></ion-icon></span>
+            </div>
            </div>
         </div>
         <div class="col">
@@ -186,7 +188,10 @@
 
   </main>
   <footer>
-d
+    <div class="Footer">
+      <p>Copyright © 2022 Lilla illatszer</p>
+      <p>Powered by Lilla illatszer</p>
+    </div>
   </footer>
       
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
